--- a/client/package.json
+++ b/client/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.38.0",
     "@tailwindcss/vite": "^4.1.11",
-    "lucide-react": "^0.535.0",
+    "axios": "^1.11.0",
+    "lucide-react": "^0.540.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.6.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.7.1",
     "tailwindcss": "^4.1.11"
